Updated Bluetooth section

--- a/main.tex
+++ b/main.tex
@@ -97,9 +97,9 @@
 \thesistype{Independent Study Thesis} % you should make this Independent Study Thesis
 \author{Natalie Pargas}
 %\presentdegrees{Ph.D.} % you should comment this line
-\degreetoobtain{Your degree}
+\degreetoobtain{BS}
 \presentschool{The College of Wooster}
-\academicprogram{Department of Your Department}
+\academicprogram{Computer Science}
 \gradyear{2025}
 \advisor{Your advisor (Department)}
 %\secondadvisor{Second Advisor}
