--- a/references.bib
+++ b/references.bib
@@ -2,98 +2,144 @@
 %% http://www.cs.ucsd.edu/~mmccrack/bibdesk.html
 %% Created for Jon Breitenbucher at 2005-09-15 16:48:40 -0400 
 %% Saved with string encoding UTF-8 
-@article{ophs03,
-	Annote = {This is a very good introduction to \LaTeX},
-	Author = {Tobias Oetiker and Hurbert Partl and Irene Hyna and Elisabeth Schlegl},
-	Title = {The {N}ot {S}o {S}hort {I}ntroduction to {\LaTeX2e{}}},
-	Url = {http://www.ctan.org/tex-archive/info/lshort/english/lshort.pdf},
-	Year = 2003}
+@book{intelManual,
+author = {?},
+title = {Intel® 64 and IA-32 Architectures Software Developer’s Manual},
+publisher = {Intel},
+year = {2024},
+annote = {Describes the architecture and programming environment of processors supporting IA-32 and Intel® 64 architectures.}
+}
 
-@article{feu02,
-	Author = {Thomas Feuerstack},
-	Journal = {TUGboat},
-	Number = {3/4},
-	Pages = {329--334},
-	Title = {Introduction to pdf{\TeX{}}},
-	Url = {http://www.tug.org/TUGboat/Articles/tb23-3-4/tb75feu.pdf},
-	Volume = {23},
-	Year = 2002}
+@book{PracticalRE,
+author    = {Bruce Dang, Alexandre Gazet, Elias Bachaalany, Sebastien Josse},
+title     = {Practical Reverse Engineering : X86, X64, ARM, Windows Kernel, Reversing Tools, and Obfuscation},
+publisher = {John Wiley & Sons, Incorporated},
+year      = {2014},
+annote    = {This textbook goes into the weeds of reverse engineering with each of the different most popular instruction set architectures.}
+}
+@book{Reversing,
+author    = {Eilam, Eldad},
+title     = {Reversing : Secrets of Reverse Engineering},
+publisher = {John Wiley & Sons, Incorporated},
+year      = {2005},
+annote    = {This textbook is a comprehensive guide on reverse engineering. It covers all of the tools, methods, applications, and any related information on reverse engineering.}
+}
+@book{MasteringRE,
+author    = {Reginald Wong},
+title     = {Mastering Reverse Engineering},
+publisher = {Packt Publishing},
+year      = {2018},
+annote    = {This textbook is also a general guide on reverse engineering even though it is slightly less comprehensive. It covers some extra information alongside different example problems.}
+}
+@article{AssemblyRe,
+author    = {Mytechnotalent},
+title     = {Reverse Engineering For Everyone!},
+journal   = {Github},
+year      = {2021},
+url     = {https://0xinfection.github.io/reversing/},
+annote    = {This is the holy grail for reverse engineering from Assembly. It starts with explaining the basics and gradually teaches the reader anything they’d need to know for reverse engineering. There’s even specific guides for each low level architecture such as x86 or ARM32. Once they’ve been given all the background information they can ask for, there are multiple example problems with their explanations so they can see how the information is applied. I plan to use the x86 section in this book to guide me on understanding the Assembly code the decompilation of my project will produce.}
+}
 
-@article{fly03,
-	Author = {Peter Flynn},
-	Journal = {TUGboat},
-	Number = {2},
-	Pages = {115--237},
-	Title = {Formatting {I}nformation},
-	Url = {http://www.tug.org/tex-archive/info/beginlatex/beginlatex.letter.pdf},
-	Volume = {23},
-	Year = 2003}
+@article{ColorDe,
+author    = {Nick Sarno},
+title     = {Color, UIColor, Color Literals, and Hex Colors in SwiftUI | Bootcamp #4},
+journal   = {Youtube},
+year      = {2021},
+url     = { www.youtube.com/watch?v=pqnLevvM7Rs},
+annote    = {This video goes over how to work with colors in Swift. It will be helpful specifically for the RGB slider portion of my project.}
+}
 
-@book{gra96,
-	Author = {George Gr\"atzer},
-	Location = {Boston},
-	Publisher = {Birkh\"auser},
-	Title = {Math into \LaTeX},
-	Url = {http://www.tug.org/tex-archive/info/mil/mil.pdf},
-	Year = 1996}
+@article{AppDe,
+author    = {Chris Ching},
+title     = {How to Make an App in 8 Days (2024)},
+journal   = {Youtube},
+year      = {2024},
+url     = {youtube.com/playlist?list=PLMRqhzcHGw1Y5Cluhf7pKRNZtKaA3Q4kg&si=CpPRbNJ8wKRW_xXx},
+annote    = {This playlist is similar to the textbook on mobile app development but has some more step by step guides. In it they are creating an app to play the card game War. I will only be using the videos on UI development, Swift Functions, and mobile app Logic. }
+}
+% Other types include book for citing books, inproceedings for conference
+% proceedings, and many other types.
+@book{mobileRe,
+author    = {Abhinav Mishra},
+title     = {Mobile App Reverse Engineering: Get Started with Discovering, Analyzing, and Exploring the Internals of Android and IOS Apps.},
+publisher = {Packt Publishing},
+year      = {2021},
+annote    = {This textbook has been the most used source of my project information thus far. It has a breakdown of how iOS apps are structured as well as the tools needed to reverse engineer them. There is also a general overview of all of the basic iOS reverse engineering methods. Some of the tools it goes over include Ghidra, Radare2 framework, and Frida. Because I am not dealing with encryption, Radare2 and Frida will be less helpful to me. The part on Ghidra static analysis is probably going to be the most helpful. I imagine I will refer to this textbook heavily at the beginning of my project, but need to look to other sources for more thorough breakdowns of Assembly and Ghidra.} 
+}
 
-@book{kd03,
-	Address = {New York},
-	Author = {Helmut Kopka and Patrick W. Daly},
-	Edition = {4th},
-	Publisher = {Pearson Education},
-	Title = {Guide to \LaTeX},
-	Year = 2003}
+@book{mobileDe,
+author    = {Iversen, Jakob, and Michael Eierman},
+title     = {Learning Mobile App Development: A Hands-on Guide to Building Apps with IOS and Android},
+publisher = {Addison-Wesley},
+year      = {2014},
+annote    = {This textbook goes over the fundamentals of mobile app development. I will specifically be using the section on iOS development. They offer an overview of Apple’s Xcode programming environment. They cover both interface design and data handling. Both of these parts will be relevant to my project since I’ll be dealing with UI design and color display.}
+}
 
-@book{mgbcr04,
-	Address = {New York},
-	Author = {Frank Mittelbach and Michel Goossens and Johannes Braams and David Carlisle and Chris Rowley},
-	Edition = {2nd},
-	Publisher = {Addison Wesley Professional},
-	Title = {The \LaTeX\ Companion},
-	Year = 2004}
+@book{GhidraRe,
+author    = {A.P. David},
+title     = {Ghidra Software Reverse Engineering for Beginners},
+publisher = {Packt Publishing},
+year      = {2021},
+annote    = {This textbook is a reference for navigating Ghidra. I plan to refer to this textbook when I am stuck on how to handle something in my reverse engineering endeavors. There are a lot of explanations of how to use Ghidra’s expansive tool library as well as how to automate scripts. It even begins with a breakdown of reverse engineering a Hello World program that would’ve been helpful when I was beginning the process of figuring out reverse engineering. The section on creating graphs for functions in Ghidra has already helped to guide me.}
+}
 
-@misc{brei04,
-	Author = {Jon Breitenbucher},
-	Date-Modified = {2021-09-15 15:40:08 -0400},
-	Howpublished = {World Wide Web},
-	Note = {Accessed on 09/27/2021},
-	Title = {{W}ooster related {L}a{T}e{X} files},
-	Url = {http://woolatex.spaces.wooster.edu},
-	Year = 2021}
+@book{makebluetooth,
+  author    = {Alasdair Allan and Don Coleman and Sandeep Mistry},
+  title     = {Make: Bluetooth: Bluetooth LE Projects with Arduino, Raspberry Pi, and Smartphones},
+  year      = {2016},
+  publisher = {Maker Media, Inc.},
+  isbn      = {9781680451108},
+  url       = {https://learning.oreilly.com/library/view/make-bluetooth/9781680451108/}
+}
 
-@misc{kon04,
-	Author = {Stasinos Konstantopoulos},
-	Howpublished = {World Wide Web},
-	Note = {Accessed on 03/11/2004},
-	Title = {BibTeX Entries},
-	Url = {http://odur.let.rug.nl/~konstant/Ac/publications.html},
-	Year = 2004}
+@book{gettingstartedwble,
+  author    = {Kevin Townsend and Carles Cufí and Akiba and Robert Davidson},
+  title     = {Getting Started with Bluetooth Low Energy: Tools and Techniques for Low-Power Networking},
+  year      = {2015},
+  publisher = {O’Reilly Media, Inc.},
+  isbn      = {9781491900550},
+  url       = {https://learning.oreilly.com/library/view/getting-started-with/9781491900550/}
+}
 
-@techreport{GAR86,
-	Author = {J. Garcia},
-	Institution = {U.S. Patent and Trademark Office},
-	Optaddress = {Washington D.C.},
-	Optkey = {Patent Number 4,621,334},
-	Title = {Personal Identification Apparatus},
-	Year = {1986}}
+@misc{introtoble,
+  author    = {Spiros Daskalakis},
+  title     = {Introduction to Bluetooth Low Energy v1.1},
+  year      = {2019},
+  url       = {https://daskalakispiros.com/files/Ebooks/Intro+to+Bluetooth+Low+Energy+v1.1.pdf},
+  note      = {Accessed: 2025-04-24}
+}
 
-@book{SIN99,
-	Address = {New York},
-	Author = {Simon Singh},
-	Publisher = {Anchor Books},
-	Title = {The Code Book},
-	Year = 1999}
+@incollection{nextgenBLE,
+  author    = {Sasha Sirotkin and Kassem Fawaz and Anthony Rowe},
+  title     = {Bluetooth 5 and Beyond},
+  booktitle = {Next Generation of Internet of Things},
+  publisher = {ISTE Press - Elsevier},
+  year      = {2020},
+  isbn      = {9781789451771},
+  url       = {https://learning.oreilly.com/library/view/next-generation-of/9781789451771/c06.xhtml#s6-5}
+}
 
-@book{TRA02,
-	Address = {Upper Saddle River, NJ},
-	Author = {Wade Trappe and Lawrence  C. Washington},
-	Publisher = {Prentice Hall},
-	Title = {Introduction to Cryptography with Coding Theory},
-	Year = 2002}
+@book{buildingBLEsystems,
+  author    = {Mohammad Afaneh and Kevin Townsend and M. Karvinen},
+  title     = {Building Bluetooth Low Energy Systems},
+  year      = {2017},
+  publisher = {Packt Publishing},
+  isbn      = {9781786461087},
+  url       = {https://learning.oreilly.com/library/view/building-bluetooth-low/9781786461087/}
+}
 
-@book{SIM96,
-	Author = {Fred Simmonds},
-	Publisher = {McGraw-Hill},
-	Title = {Network Security: Data and Voice Communications},
-	Year = 1996}
+@misc{bluetoothcorespec6,
+  author    = {{Bluetooth SIG}},
+  title     = {Bluetooth Core Specification Version 6.0},
+  year      = {2024},
+  url       = {https://www.bluetooth.com/specifications/specs/core60-html/},
+  note      = {Accessed: 2025-04-24}
+}
+
+@misc{intelBLEguide,
+  author    = {{Intel Corporation}},
+  title     = {How Does Bluetooth Work?},
+  year      = {2023},
+  url       = {https://www.intel.com/content/www/us/en/products/docs/wireless/how-does-bluetooth-work.html},
+  note      = {Accessed: 2025-04-24}
+}
