replaced images with sharper ones

--- a/main.tex
+++ b/main.tex
@@ -247,8 +247,8 @@ I would like to acknowledge Prof. Lowell Boone in the Physics Department for his
 \input{chapters/chapter1}
 \input{chapters/chapter2}
 \input{chapters/chapter3}
-%\input{chapters/chapter4}
-%\input{chapters/chapter5}
+\input{chapters/chapter4}
+\input{chapters/chapter5}
 %\input{chapters/chapter6}
 %\input{chapters/chapter7}
 %\input{conclusion}
