--- a/references.bib
+++ b/references.bib
@@ -143,3 +143,64 @@ annote    = {This textbook is a reference for navigating Ghidra. I plan to refer
   url       = {https://www.intel.com/content/www/us/en/products/docs/wireless/how-does-bluetooth-work.html},
   note      = {Accessed: 2025-04-24}
 }
+
+
+@article{stateofartRE,
+	abstract = {Communication protocols enable structured information exchanges between different entities. A description, at different levels of detail, is necessary for many applications, such as interoperability or security audits. When such a description is not available, one can resort to protocol reverse engineering to infer the format of exchanged messages or a model of the protocol. During the past 12 years, several tools have been developed in order to automate, entirely or partially, the protocol inference process. Each of those tools has been developed with a specific application goal for the inferred model, leading to specific needs, and thus different strengths and limitations. After identifying key challenges, the paper presents a survey of protocol reverse engineering tools developed in the last decade. We consider tools focusing on the inference of the format of individual messages or of the grammar of sequences of messages. Finally, we propose a classification of these tools according to different criteria, that is aimed at providing relevant insights about the techniques used by each of these tools and comparatively to other tools, for the classification of messages, the inference of their format or of the grammar of the protocol. This classification also permits to identify technical areas that are not sufficiently explored so far and that require further development in the future.},
+	author = {Duch{\^e}ne, Julien and Le Guernic, Colas and Alata, Eric and Nicomette, Vincent and Ka{\^a}niche, Mohamed},
+	date = {2018/02/01},
+	date-added = {2025-07-21 13:11:29 -0400},
+	date-modified = {2025-07-21 13:11:29 -0400},
+	doi = {10.1007/s11416-016-0289-8},
+	id = {Duch{\^e}ne2018},
+	isbn = {2263-8733},
+	journal = {Journal of Computer Virology and Hacking Techniques},
+	number = {1},
+	pages = {53--68},
+	title = {State of the art of network protocol reverse engineering tools},
+	url = {https://doi.org/10.1007/s11416-016-0289-8},
+	volume = {14},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.1007/s11416-016-0289-8}}
+
+@book{covertjava,
+	author    = {Alex Kalinovsky},
+	title     = {Covert Java: Techniques for Decompiling, Patching, and Reverse Engineering},
+	publisher = {Sams Publishing},
+	year      = {2004},
+	address   = {Indianapolis, IN, USA},
+	isbn      = {0-672-32638-8}
+}
+
+@book{headfirstandroid,
+	author    = {Griffiths, Dawn and Griffiths, David},
+	title     = {Head First Android Development},
+	edition   = {3},
+	publisher = {O{\textquotesingle}Reilly Media, Incorporated},
+	address   = {Sebastopol, CA},
+	year      = {2021},
+	isbn      = {978-1492076513},
+}
+
+@book{jvms8,
+	author    = {Tim Lindholm and Frank Yellin and Gilad Bracha and Alex Buckley},
+	title     = {The Java\textregistered{} Virtual Machine Specification, Java SE 8 Edition},
+	publisher = {Addison–Wesley Professional (Oracle),
+	Pearson Education},
+	address   = {Boston, MA},
+	year      = {2014},
+	month     = {May},
+	isbn      = {978-0133922721},
+	note      = {Published electronically by Oracle on 2015-02-13},
+}
+
+@techreport{bluetooth2023,
+	author       = {{Bluetooth SIG, Inc.}},
+	title        = {Core Specification 5.4 – Host},
+	institution  = {Bluetooth Special Interest Group},
+	type         = {Technical Report},
+	year         = {2023},
+	month        = feb,
+	note         = {Available online},
+	url          = {https://www.bluetooth.com/wp-content/uploads/Files/Specification/HTML/Core-54/out/en/host.html},
+}
