Pushing up for review

--- a/references.bib
+++ b/references.bib
@@ -13,14 +13,14 @@ annote = {Describes the architecture and programming environment of processors s
 @book{PracticalRE,
 author    = {Bruce Dang, Alexandre Gazet, Elias Bachaalany, Sebastien Josse},
 title     = {Practical Reverse Engineering : X86, X64, ARM, Windows Kernel, Reversing Tools, and Obfuscation},
-publisher = {John Wiley & Sons, Incorporated},
+publisher = {John Wiley and Sons, Incorporated},
 year      = {2014},
 annote    = {This textbook goes into the weeds of reverse engineering with each of the different most popular instruction set architectures.}
 }
 @book{Reversing,
 author    = {Eilam, Eldad},
 title     = {Reversing : Secrets of Reverse Engineering},
-publisher = {John Wiley & Sons, Incorporated},
+publisher = {John Wiley and Sons, Incorporated},
 year      = {2005},
 annote    = {This textbook is a comprehensive guide on reverse engineering. It covers all of the tools, methods, applications, and any related information on reverse engineering.}
 }
@@ -38,24 +38,6 @@ journal   = {Github},
 year      = {2021},
 url     = {https://0xinfection.github.io/reversing/},
 annote    = {This is the holy grail for reverse engineering from Assembly. It starts with explaining the basics and gradually teaches the reader anything they’d need to know for reverse engineering. There’s even specific guides for each low level architecture such as x86 or ARM32. Once they’ve been given all the background information they can ask for, there are multiple example problems with their explanations so they can see how the information is applied. I plan to use the x86 section in this book to guide me on understanding the Assembly code the decompilation of my project will produce.}
-}
-
-@article{ColorDe,
-author    = {Nick Sarno},
-title     = {Color, UIColor, Color Literals, and Hex Colors in SwiftUI | Bootcamp #4},
-journal   = {Youtube},
-year      = {2021},
-url     = { www.youtube.com/watch?v=pqnLevvM7Rs},
-annote    = {This video goes over how to work with colors in Swift. It will be helpful specifically for the RGB slider portion of my project.}
-}
-
-@article{AppDe,
-author    = {Chris Ching},
-title     = {How to Make an App in 8 Days (2024)},
-journal   = {Youtube},
-year      = {2024},
-url     = {youtube.com/playlist?list=PLMRqhzcHGw1Y5Cluhf7pKRNZtKaA3Q4kg&si=CpPRbNJ8wKRW_xXx},
-annote    = {This playlist is similar to the textbook on mobile app development but has some more step by step guides. In it they are creating an app to play the card game War. I will only be using the videos on UI development, Swift Functions, and mobile app Logic. }
 }
 % Other types include book for citing books, inproceedings for conference
 % proceedings, and many other types.
@@ -189,7 +171,7 @@ annote    = {This textbook is a reference for navigating Ghidra. I plan to refer
 	Pearson Education},
 	address   = {Boston, MA},
 	year      = {2014},
-	month     = {May},
+	month     = {5},
 	isbn      = {978-0133922721},
 	note      = {Published electronically by Oracle on 2015-02-13},
 }
